--- a/dashboard.html
+++ b/dashboard.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dashboard</title>
-    
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="Style_dashboard.css">
 </head>
 <body>
-    <h1>Welcome to Dashboard</h1>
+    <header>
+        <nav role="navigation">
+            <div id="menuToggle">
+                <input type="checkbox" id="menuCheckbox" />
+                <span></span>
+                <span></span>
+                <span></span>
+                <ul id="menu">
+                    <li>
+                        <a class="#">Home</a>
+                    </li>
+                    <li>
+                        <a class="#">Student</a>
+                    </li>
+                    <li>
+                        <a class="#">Course</a>
+                    </li>
+                    <li>
+                        <a class="#">Section</a>
+                    </li>
+                    <li>
+                        <a class="#">Room</a>
+                    </li>
+                    <li>
+                        <a class="#">Teacher</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     
 </body>
+
 </html>
