--- a/index.html
+++ b/index.html
@@ -38,14 +38,19 @@
         <section id="home" class="section_2">
         <div class="her">
             <ol>
-                <p> 
-                <span class="accent-1">EFFORTLESS BOOKINGS EMPOWER</span><br>
-                <span class="accent-2">CAR WASHES, BRIGHTER RESULTS</span>
-                </p>
-    
-                <div class="more">
-                    <a href="About.HTML">Learn More</a>
-                </div>
+                <h2>About Us</h2>
+                <P>"WashWise" is a third-party web-based application designed to streamline the car wash</P>
+                <P>appointment booking process by connecting customers with multiple registered car wash service</P>
+                <P>providers. Through this web-based application, users can conveniently check real-time</P>
+                <P>availability, compare services, and book appointments without the hassle of waiting in line,</P>
+                <P>especially during peak hours. The application provides up-to-date pricing, available slots, and</P>
+                <P>service options from various partnered car wash businesses, allowing customers to choose the</P>
+                <P>best option based on their preferences. Business owners can benefit from WashWise by</P>
+                <P>managing reservations, reducing walk-ins, and optimizing their service capacity, ultimately</P>
+                <P>improving operational efficiency. With automated scheduling and service updates, WashWise</P>
+                <P>enhances customer convenience while supporting car wash businesses in increasing their</P>
+                <P>visibility and profitability in a competitive market.</P>
+            </ol>
             </ol>
         </div>
             </section>
