--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="her">
             <ol>
                 <h1>About Us</h1>
-                <P class = "jjk">"WashWise" is a third-party web-based application designed to streamline the car wash<br>
+                <P>"WashWise" is a third-party web-based application designed to streamline the car wash<br>
                 appointment booking process by connecting customers with multiple registered car wash service<br>
                 providers. Through this web-based application, users can conveniently check real-time<br>
                 availability, compare services, and book appointments without the hassle of waiting in line,<br>
@@ -52,21 +52,16 @@
                 enhances customer convenience while supporting car wash businesses in increasing their<br>
                 visibility and profitability in a competitive market.</P>
             </ol>
-            </ol>
         </div>
             </section>
 
             <section id="home" class="section_3">
             <div class="her">
                 <ol>
-                    <p> 
-                    <span class="accent-1">EFFORTLESS BOOKINGS EMPOWER</span><br>
-                    <span class="accent-2">CAR WASHES, BRIGHTER RESULTS</span>
-                    </p>
-        
-                    <div class="more">
-                        <a href="About.HTML">Learn More</a>
-                    </div>
+                    <h1>Mission</h1>
+                    <P>WashWise's mission is to simplify and improve the car wash experience by<br>
+                        connecting customers with service providers through a smart, convenient,<br>
+                        and efficient booking platform.</P>
                 </ol>
             </div>
                 </section>
