--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ol>
             <p> 
             <span class="accent-1">EFFORTLESS BOOKINGS EMPOWER</span><br>
-            <span class="accent-2">CAR WASHWISE, BRIGHTER RESULTS</span>
+            <span class="accent-2">CAR WASHES, BRIGHTER RESULTS</span>
             </p>
 
             <div class="more">
