--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </p>
 
             <div class="more">
-                <a href="About.HTML">Learn More</a>
+                <a href="#about">Learn More</a>
             </div>
         </ol>
     </div>
