--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </div>
             <a href="index.html"> Home </a>
             <a href="#about"> About </a>
-            <a href="SignUp.php"> Sign up </a>
+            <a href="terms.html"> Sign up </a>
         <div class="log">
             <a href="Login.php"> Sign in </a></div>
         </div>
